--- a/03-Methods and Functions/01-Methods.ipynb
+++ b/03-Methods and Functions/01-Methods.ipynb
@@ -56,30 +56,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lst.append(6)"
+    "lst.append('fsd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 5, 6]"
+       "[1, 2, 3, 4, 5, 6, 'fsd']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 5]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst.pop(1)\n",
     "lst"
    ]
   },
@@ -92,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -101,14 +122,14 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check how many times 2 shows up in the list\n",
-    "lst.count(2)"
+    "lst.count(1)"
    ]
   },
   {
@@ -120,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -129,14 +150,34 @@
      "text": [
       "Help on built-in function count:\n",
       "\n",
-      "count(...) method of builtins.list instance\n",
-      "    L.count(value) -> integer -- return number of occurrences of value\n",
+      "count(value, /) method of builtins.list instance\n",
+      "    Return number of occurrences of value.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "help(lst.count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 5, 1, 4, 5, 1, 4, 5, 1, 4, 5]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst.pop"
    ]
   },
   {
@@ -170,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
